# sclx_c7042

./: CMakeLists.txt  COPYING  README.md  crc.h  rpi_sound.sh  sclx.cpp  sclx_consts.h  sclx_cycle_task.h  sclx_in.h  sclx_out.h  sclx_task.cpp  sclx_task.h
cmake/: FindJsonCpp.cmake
websocket/: server_ws.hpp
webui/: app.js  index.html
webui/lib/: fetch-deps.sh  ng-modal.css
